<resources>
    <string name="app_name">Music 04</string>
    <string name="search">Search...</string>
    <string name="infor">Information</string>
    <string name="textfeedback">This app is developer free. Please contact : </string>
    <string name="description">It is content description</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="input_album_new">Input album new</string>
    <string name="please_input_album_name">Please input album name</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="input_feedback">Please input feedback</string>
    <string name="send">Send</string>
    <string name="danh_sach_bai_hat">Danh sách bài hát</string>
    <string name="danh_sach_album">Danh sách Album</string>
    <string name="add_album">Add album</string>
</resources>

