<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/edtDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/input_album_new"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            />
        <Button
            android:id="@+id/btnAddDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>
</LinearLayout>




