<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="3"
    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/dp_250"
        android:layout_height="@dimen/dp_80"
        android:layout_weight="1"
        android:text="@string/infor"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/dp_30"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_weight="1"
        android:text="@string/textfeedback"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/dp_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />
    <ImageView
        android:id="@+id/btnIntentFeedbackFB"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginRight="@dimen/dp_80"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/fb"
        />
    <ImageView
        android:id="@+id/btnIntentFeedbackGG"
        android:layout_width="@dimen/dp_80"
        android:layout_height="@dimen/dp_80"
        android:layout_marginLeft="@dimen/dp_80"
        android:layout_weight="1"
        android:contentDescription="@string/description"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/google"
        />
</android.support.constraint.ConstraintLayout>
